--- a/user-dashboard/app/globals.css
+++ b/user-dashboard/app/globals.css
@@ -15,6 +15,13 @@
 .bg-blue-800 {
   background-color: #1310c6;
 }
+.text-blue-800 {
+  color: #1310c6;
+}
+
+.border-stone-300 {
+  border-color: #d0d0d0;
+}
 
 .menu-color > svg > path,
 .menu-color > svg > g > path {
@@ -70,17 +77,17 @@ th {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(180, 162, 255);
-  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(201, 201, 255);
+  border-radius: 5px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(176, 144, 255, 0.61);
-  border-radius: 10px;
+  background: #4294ff;
+  border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #bfb1ff;
+  background: #006eff;
 }
