--- a/user-dashboard/app/globals.css
+++ b/user-dashboard/app/globals.css
@@ -51,6 +51,12 @@
 .bg-blue-800 {
   background-color: #1310c6;
 }
+/* .bg-green-500 {
+  background-color: #14f46e;
+}
+.bg-rose-600 {
+  background-color: #f4143d;
+} */
 .text-blue-800 {
   color: #1310c6;
 }
