--- a/user-admin/app/globals.css
+++ b/user-admin/app/globals.css
@@ -94,12 +94,21 @@ th {
   transition: all 0.4s ease-in-out;
 }
 
+.menu-color > svg > path,
+.menu-color > svg > g > path {
+  fill: #1310c6;
+}
+
 .svg-shadow {
   box-shadow: 4px 4px 12px 0px rgb(173 171 255 / 51%);
 }
 
 .pricing-shadow {
   box-shadow: 0px 0px 45px 0px rgba(19, 16, 198, 0.28);
+}
+
+.board-shadow {
+  box-shadow: 0px 8px 25px -24px #4845ff;
 }
 
 /* stepper styles */
@@ -160,6 +169,10 @@ span#RFS-Label {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #9597ff;
+}
+
+.login-scroll::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
 }
 
 input[type='password']::-ms-reveal,
