--- a/user-dashboard/components/text-editor/tiptapstyle.css
+++ b/user-dashboard/components/text-editor/tiptapstyle.css
@@ -2,8 +2,8 @@
   padding: 5px;
 }
 
-.tiptap > h2 {
-  font-size: 18px;
+.tiptap h2 {
+  font-size: 18px !important;
   font-weight: 400;
 }
 
@@ -18,8 +18,16 @@
   fill: black !important;
 }
 
-.tiptap > ul {
-  list-style-type: disc;
+ol,
+ul,
+menu {
+  /* list-style: disc !important; */
+  margin: auto !important;
+  padding: auto !important;
+}
+
+.tiptap ul {
+  list-style-type: disc !important;
   list-style-position: inside;
 }
 
@@ -40,6 +48,7 @@
   font-family: JetBrainsMono, monospace;
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
+  margin: 0.5rem 0 !important;
 }
 
 .tiptap pre code {
@@ -51,8 +60,7 @@
 
 .ProseMirror {
   padding: 8px 16px;
-  order: 1;
-  /* height: 60px; */
+  /* height: 160px; */
   overflow-y: scroll;
   word-break: break-all;
 }
@@ -62,14 +70,6 @@
 }
 
 .tiptap p.is-editor-empty:first-child::before {
-  color: #adb5bd;
-  content: attr(data-placeholder);
-  float: left;
-  height: 0;
-  pointer-events: none;
-}
-
-.tiptap p.is-empty::before {
   color: #adb5bd;
   content: attr(data-placeholder);
   float: left;
